# sdgenbox

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  Taskfile.sh  Taskfile.yml  autofix.sh  docker-compose.yml  example.env
migrations/: 20230422182330_create_image_table.sql  20230423065410_create_image_table.down.sql  20230423065410_create_image_table.up.sql  20230423065414_add_column_created_at_for_image.down.sql  20230423065414_add_column_created_at_for_image.up.sql
src/: config.rs  main.rs  models.rs  templates.rs  utils.rs
src/handlers/: images.rs  index.rs  mod.rs  upload.rs
src/templates/: db_test.html  index.html  upload_form.html  upload_result.html
src/utils/: errors.rs  image.rs  mod.rs  pager.rs  render.rs
templates/: base.html  deduplication_result.html  index.html
templates/images/: image.html  list.html  upload_form.html
