[package]
name = "sdgenbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-web = "4"
anyhow = { version = "1.0.70", features = ["backtrace"] }
env_logger = "0.10.0"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.3"
serde = "1.0.160"
serde_json = "1.0.96"
tera = "1.18.1"
thiserror = "1.0.40"
