[package]
name = "sdgenbox"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4"
anyhow = { version = "1.0.70", features = ["backtrace"] }
askama = "0.12.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
envy = "0.4.2"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "rt", "full"] }
